# armly

./: README.md
commander/: Cargo.toml  config.ron
commander/src/: main.rs  thread_pool.rs
soldier/: Cargo.toml  config.ron
soldier/src/: main.rs  soldier.rs
walkietalkie/: Cargo.toml
walkietalkie/src/: commander.rs  lib.rs  soldier.rs
walkietalkie/src/commander/: command.rs  commander_config.rs  mod.rs
walkietalkie/src/soldier/: report.rs  soldier_config.rs
