[package]
name = "soldier"
version = "0.1.0"
authors = ["Henry Barreto <contato@henrybarreto.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
daemonize = "0.4.1"
log = "0.4.11"

[dependencies.walkietalkie]
path = "../walkietalkie"