[package]
name = "walkietalkie"
version = "0.1.0"
authors = ["Henry Barreto <contato@henrybarreto.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["derive"]}
openssl = "0.10.31"
ron = "0.6.4"